--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       const textureLoader = new THREE.TextureLoader();
 
       // Caricamento della texture PNG
-      const texture = textureLoader.load(rat.png");
+      const texture = textureLoader.load("rat.png");
 
       let model;
 
