--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       }
       @media (max-width: 600px) {
         #playButton {
-          font-size: 14px; /* Riduci la dimensione del font */
-          padding: 8px 16px; /* Riduci il padding */
+          padding: 15px 30px; /* Maggiore padding */
+          font-size: 20px; /* Maggiore dimensione del font */
           bottom: 10px; /* Posizione più alta */
           left: 10px; /* Posizione più alta */
         }
