--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         background-color: red;
         color: white;
         border: none;
-        padding: 10px 20px;
-        font-size: 16px;
+        padding: 15px 30px; /* Maggiore padding */
+        font-size: 18px; /* Maggiore dimensione del font */
         cursor: pointer;
         position: fixed;
         bottom: 20px;
@@ -24,8 +24,8 @@
       }
       @media (max-width: 600px) {
         #playButton {
-          padding: 15px 30px; /* Maggiore padding */
-          font-size: 20px; /* Maggiore dimensione del font */
+          font-size: 20px; /* Dimensione del font per schermi piccoli */
+          padding: 12px 24px; /* Padding per schermi piccoli */
           bottom: 10px; /* Posizione più alta */
           left: 10px; /* Posizione più alta */
         }
